# Lab2-3

./: Arm.cpp  Arm.h  BodyPart.cpp  BodyPart.h  BodyPartFactory.cpp  BodyPartFactory.h  CMakeLists.txt  Cyborg.cpp  Cyborg.h  Head.cpp  Head.h  IProfession .h  LeftOrRight.h  Leg.cpp  Leg.h  Part.h  Processor.cpp  Processor.h  Profession.h  Scientist.cpp  Scientist.h  Soldier.cpp  Soldier.h  Torso.cpp  Torso.h  UnitTests.cpp  Worker.cpp  Worker.h  main.cpp
